# solver-cpp

./: CMakeLists.txt
include/engine/: cell.hpp  defs.hpp  desk.hpp
src/engine/: cell.cpp  desk.cpp
src/test/: command.cpp  command.hpp  console.cpp
